applications/omeka/styles-imports/_footer.scss
.column {
  position: relative;
  width: 49%
}

@media screen and (max-width: 900px) {
  .column {
    width: 100%
  }

  .qanzac {
    margin-top: 30px !important;
    margin-bottom: 10px
  }

  #footer-text {
    background-color: $theme-color;
    height: auto;
  }

  .footer-list ul.footer-uq-details li {
    overflow: hidden; // iphone6 & 6s is pushing right
  }
}

.qanzac {
  color: #fff;
  text-align: center;
}

#qanzac-statement {
  white-space: normal;
}

#qanzac-logo img {
  width: auto;
  margin-top: 5px;
  height: 64px
}

@media screen and (max-width: 700px) {
  #qanzac-logo img {
    height: auto;
    width:100%;
  }
}

footer {
  background-color: $theme-color;
  color: $menu-background-color;
  text-decoration: none;
  line-height: 20px;
  font-size: 14px;
  padding: 0;
  margin: 0;
  border-top-width: 0;
}

.footer-container {
  text-decoration: none;
  line-height: 20px;
  white-space: nowrap;
  color: $menu-background-color !important;
  font-size: 14px;
  padding: 20px;
  margin: 0 auto;
  max-width: 1140px;
  width: 100%;

  div {
    color: $theme-color-light;
  }
  a {
    color: $menu-background-color !important;
    text-decoration: none
  }

}

// hide omeka credit, because it sticks out stupidly
#footer-text > p {
  display: none;
}

.bigtheme {
  footer {
    width:100%;
  }
  // hide silly contact links
  #primary-nav,
  #footer-content {
    display: none;
  }
}

